<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_50"
        android:textSize="40sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/highScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/high_score"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/play_again"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        android:onClick="playAgain"/>

    <Button
        android:id="@+id/scoretableBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/see_scoretable"
        app:cornerRadius="15dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/addcalendarButton"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:width="60dp"
        android:text="@string/add_calendar"
        android:layout_marginTop="10dp"
        app:cornerRadius="50dp" />

</LinearLayout>