<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/puzzle"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/puzzledroid"
        android:textSize="48sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/by_ultima_pieza"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        app:cornerRadius="15dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/optionsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options"
        app:cornerRadius="15dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/scoreBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoretable"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.815"
        tools:text="Mostrar Ubicación actual" />

</LinearLayout>